2008-12-01  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Dan Bernstein.

        Fixed <video> layout tests so that DRT is notified they are done only when the video frames
        are effectively rendered in the page. This requires using a timeout since there is no <video>
        event that fires when the first frame has been drawn (the closest even fires when the element
        is ready to render and will eventually draw at some unknown point in the future).
        Thanks to this change, these tests now pass in --pixel mode as well.

        https://bugs.webkit.org/show_bug.cgi?id=21911

        * media/video-aspect-ratio.html:
        * media/video-controls-rendering.html:
        * media/video-display-toggle.html:
        * media/video-layer-crash.html:
        * media/video-paint-test.js:
        (init):
        * media/video-transformed.html:
        * platform/mac/media/video-aspect-ratio-expected.checksum:
        * platform/mac/media/video-aspect-ratio-expected.png:
        * platform/mac/media/video-controls-rendering-expected.checksum:
        * platform/mac/media/video-controls-rendering-expected.png:
        * platform/mac/media/video-display-toggle-expected.checksum:
        * platform/mac/media/video-display-toggle-expected.png:
        * platform/mac/media/video-layer-crash-expected.checksum:
        * platform/mac/media/video-layer-crash-expected.png:
        * platform/mac/media/video-transformed-expected.checksum:
        * platform/mac/media/video-transformed-expected.png:

2008-12-01  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22463
        Add a test for accessing navigator.cookieEnabled after navigation.

        * fast/dom/navigator-cookieEnabled-no-crash-expected.txt: Added.
        * fast/dom/navigator-cookieEnabled-no-crash.html: Added.
        * fast/dom/resources/test-successful-destination.html: Added.
