@@ -1,0 +1,3 @@
+This tests the same-origin check on about:blank loaded in a subframe. The test passes if the browser does not crash. You should also see "Test PASSED" below. 
+
+Test PASSED
