@@ -1,3 +1,14 @@
+2008-12-01  Pamela Greene  <pam@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22464
+        Add a test for a potential crash when performing a same-origin
+        check on a subframe reloaded with about:blank.
+
+        * fast/js/same-origin-subframe-about-blank-expected.txt: Added.
+        * fast/js/same-origin-subframe-about-blank.html: Added.
+
 2008-12-01  Pierre-Olivier Latour  <pol@apple.com>
 
         Reviewed by Dan Bernstein.
